format: Fix link styling and header spacing. Clean and improve configuration files.

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -1,11 +1,16 @@
 $background-color: #fafcea;
 $link-color: #754e11;
+$article-link-color: #0000ee;
 
 // * { border: 1px solid black; }
 
 body {
     background-color: $background-color;
     padding: 0;
+}
+
+h2 {
+    margin-top: 2.5rem;
 }
 
 p {
@@ -206,6 +211,15 @@ article {
     background-color: #fff;
     padding: 6px 12px;
     margin: 10px 0;
+
+    a {
+        color: $article-link-color;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .tags {
